[gd_scene load_steps=2 format=3 uid="uid://bd4wm58upjlyb"]

[ext_resource type="Script" uid="uid://ck2ph2bswvtqg" path="res://scripts/menu/game/player_stat.gd" id="1_td66p"]

[node name="PlayerStat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_td66p")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 2

[node name="Centerer" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="SkillIcon" type="TextureRect" parent="HBoxContainer/Centerer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 0
theme_override_constants/separation = -6
alignment = 1

[node name="TopLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "Placeholder"

[node name="BottomLabel" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "1/101"
